# ferrum-lens

./: .gitignore  Cargo.toml  LICENSE
crates/app-core/: Cargo.toml
crates/app-core/src/: config.rs  db_pool.rs  lib.rs  queries.rs  query.rs
crates/app-core/src/models/: connection.rs
crates/app-core/src/schema/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
crates/app-gui/: Cargo.toml
crates/app-gui/src/: app.rs  main.rs
crates/app-gui/src/panels/: connection_manager.rs  data_grid.rs  mod.rs  query_explorer.rs  schema_inspector.rs
crates/app-gui/src/theme/: colors.rs  fonts.rs  mod.rs  visuals.rs
